<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wcls"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="302dp"
        android:layout_height="84dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_vit_hostel_mess"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="267dp"
        android:layout_height="84dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/eat_well_appreciate_every_bite_don_t_waste_food_it_s_a_privilege"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/lgnn"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="@string/signup"
        android:textColor="@color/Brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/sign"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:shadowColor="@color/black"
        android:shadowDx="@integer/material_motion_duration_long_1"
        android:shadowDy="@integer/material_motion_duration_long_2"
        android:text="@string/login"
        android:textColor="@color/Brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/managerlogin"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/aclonica"
        android:text="Manager Login"
        android:textColor="@color/Brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />


</androidx.constraintlayout.widget.ConstraintLayout>